package _1_객체_설계._1_티켓_판매_애플리케이션_구현하기;

import java.time.LocalDateTime;

public class Invitation {
    // 공연 관람할 수 있는 초대일자
    private LocalDateTime when;
}
